fix: 목표 카운트 값 설정 함수 추가

--- a/02-random-count-up/index.html
+++ b/02-random-count-up/index.html
@@ -106,8 +106,12 @@
         // 문서 타이틀 ORIGIN_TITLE 설정
         const ORIGIN_TITLE = document.title;
 
-        // targetCount 변수에 랜덤 목표 카운트 값 설정
-        const targetCount = getRandomMinMax(MIN, MAX);
+        // 목표 카운트 targetCount 설정 함수(기능) 추가
+        let targetCount;
+
+        function setTargetCount() {
+          targetCount = getRandomMinMax(MIN, MAX);
+        }
 
         // 문서 타이틀 업데이트 함수(기능)설정
         // - '원본 제목 (목표 카운트)'
@@ -228,6 +232,7 @@
 
         // play 함수
         function play() {
+          setTargetCount();
           animate();
           updateDocumentTitle();
           setAppRandomHue();
