learn: 클래스 컴포넌트
- class 구문 (extends React.Component)
- 컴포넌트 이름 → 파스칼케이스로 작명
- 컴포넌트 → 엘리먼트 생성
- 컴포넌트 속성(props) → 다양한 엘리먼트 생성
- 컴포넌트 트리 구성 (this.props.children)

--- a/03-react-component/index.html
+++ b/03-react-component/index.html
@@ -24,7 +24,8 @@
       crossorigin
     ></script>
 
-    <script type="module" src="./src/components/functional.js"></script>
+    <!-- <script type="module" src="./src/components/functional.js"></script> -->
+    <script type="module" src="./src/components/class.js"></script>
     <!-- <script type="module" src="./src/main.js"></script> -->
   </head>
   <body>
