learn: LogoFunction, LogoClass 컴포넌트 작성

--- a/03-react-component/index.html
+++ b/03-react-component/index.html
@@ -24,9 +24,9 @@
       crossorigin
     ></script>
 
-    <!-- <script type="module" src="./src/components/functional.js"></script> -->
-    <script type="module" src="./src/components/class.js"></script>
-    <!-- <script type="module" src="./src/main.js"></script> -->
+    <!-- <script type="module" src="./src/component-types/functional.js"></script> -->
+    <!-- <script type="module" src="./src/component-types/class.js"></script> -->
+    <script type="module" src="./src/main.js"></script>
   </head>
   <body>
     <noscript>
