fix: shift+Enter 키로 애니메이션 다시 시작하도록 수정

--- a/02-random-count-up/index.html
+++ b/02-random-count-up/index.html
@@ -253,7 +253,7 @@
           play();
           document.addEventListener("click", replay);
           document.addEventListener("keydown", (e) => {
-            if (e.shiftKey || e.key === "Enter") {
+            if (e.shiftKey && e.key === "Enter") {
               replay();
             }
           });
