--- a/04-jsx-syntax-extension/index.html
+++ b/04-jsx-syntax-extension/index.html
@@ -23,17 +23,13 @@
       src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script
+    <!-- <script
       src="https://unpkg.com/@babel/standalone/babel.min.js"
       crossorigin
-    ></script>
+    ></script> -->
 
     <!-- <script type="module" src="./src/main.js"></script> -->
-    <script
-      type="text/jsx"
-      data-type="module"
-      src="./src/transpile.js"
-    ></script>
+    <script type="module" src="./assets/scripts/main.js"></script>
   </head>
   <body>
     <noscript>
