learn: 타입스크립트 마이그레이션 1
- 타입 안정성
- 타입 지정 및 단언
- 컴포넌트 속성 타입 지정
- ComponentProps
- useState 훅 타입 지정

--- a/27-dom-ref/index.html
+++ b/27-dom-ref/index.html
@@ -11,7 +11,7 @@
       crossorigin
     />
     <link rel="icon" href="/react.svg" type="image/xml+svg" />
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </head>
   <body>
     <noscript>
